kubernetes/car_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: carshop-service
  namespace: carshop
spec:
  selector:
    app: carshop   
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
